--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
         <section id="home" class="h-screen flex items-center justify-center text-center">
             <div class="reveal">
                 <h1 class="text-4xl md:text-7xl font-orbitron font-bold mb-4 neon-text">Multidisciplinary Artist</h1>
-                <p class="text-lg md:text-2xl text-gray-300 max-w-3xl mx-auto">Animator, motion designer, and visual artist, running a platform named <a src="https://instagram.com/_403error_">Error-403</a> focused on audiovisual performances.</p>
+                <p class="text-lg md:text-2xl text-gray-300 max-w-3xl mx-auto">Animator, motion designer, and visual artist, running a platform named <a href="https://instagram.com/_403error_">Error-403</a> focused on audiovisual performances.</p>
             </div>
         </section>
 
@@ -309,4 +309,5 @@
 
 </body>
 </html>
+
 
